template-out-myharbor1/harbor/templates/ingress/ingress.yaml
---
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "myharbor1-ingress"
  labels:
    heritage: Helm
    release: myharbor1
    chart: harbor
    app: "harbor"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: myingress3
  tls:
  - secretName: lts-aa111
    hosts:
    - myharbor1.com
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: myharbor1-core
            port:
              number: 80
      - path: /service/
        pathType: Prefix
        backend:
          service:
            name: myharbor1-core
            port:
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: myharbor1-core
            port:
              number: 80
      - path: /chartrepo/
        pathType: Prefix
        backend:
          service:
            name: myharbor1-core
            port:
              number: 80
      - path: /c/
        pathType: Prefix
        backend:
          service:
            name: myharbor1-core
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myharbor1-portal
            port:
              number: 80
    host: myharbor1.com
